[KERNEL32] - Use signed multiplication for signed numbers CORE-8502 #resolve

svn path=/trunk/; revision=64020